--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 !.gitignore
 .vscode/
-src/oatapp/build
+src/oatapp/build/
+src/CMakeCache.txt
+src/CMakeFiles/
+src/cmake_install.cmake
+src/Makefile
+src/libperil_app_server_libs.a
