fixing wrong changes part 2

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,6 @@ src/oatapp/CMakeCache.txt
 src/oatapp/CMakeFiles/
 src/cmake_install.cmake
 src/Makefile
+src/CMakeFiles
+src/CMakeCache.txt
 src/libperil_app_server_libs.a
