finally got the program to compile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,12 @@ project(peril-app-server)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED true)
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+
+find_package(Threads REQUIRED)
+
+link_libraries(-lpthread)
 
 cmake_minimum_required(VERSION 3.16)
-
-add_subdirectory(lib)
 
 add_executable(peril-app-server main.cpp)
