--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 !.gitignore
-CMakeFiles
-CMakeCache.txt
-Makefile
-cmake_install.cmake
-lib/Makefile
-lib/cmake_install.cmake
+src/CMakeFiles
+src/CMakeCache.txt
+src/Makefile
+src/cmake_install.cmake
 *.deb
 *.deb.*
+src/peril-app-server
+peril-app-server
